# ist-voice-agent

./: .gitignore  DEMO_CHECKLIST.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.web  GITHUB_AND_DEPLOY.md  Procfile  RAILWAY.md  README.md  TERMINAL_COMMANDS.md  diagnose_stt_tts.py  generate_token.py  kb_auto_update.py  pyproject.toml  render.yaml  requirements.txt  scrape_ist.py  server.py
.github/workflows/: deploy.yml
admin-dashboard/: README.md  index.html  package-lock.json  package.json
admin-dashboard/src/: App.tsx  index.css  types.ts
admin-dashboard/src/components/: DashboardLayout.css  DashboardLayout.tsx  Navbar.css  Navbar.tsx  Sidebar.css  Sidebar.tsx
admin-dashboard/src/context/: AuthContext.tsx
admin-dashboard/src/data/: mockCallLogs.ts  mockKnowledge.ts
admin-dashboard/src/pages/: CallLogs.css  CallLogs.tsx  KnowledgeBase.css  KnowledgeBase.tsx  Login.css  Login.tsx  Profile.css  Profile.tsx  Reports.css  Reports.tsx  Settings.css  Settings.tsx
docs/: WEB_CALL_NETWORK.md
src/: admin_dashboard.py  agent.py  cli_voice_agent.py  gradio_voice_agent.py  ist_knowledge.py  run_web_with_tunnel.py  typer.py  web_call_app.py  web_call_index.html
web/: call-ist.html  index.html  voice-call.html
