[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.10, <3.14"

dependencies = [
    "livekit-agents[openai,silero,turn-detector,assemblyai,cartesia]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "soundfile>=0.12.1",
    "groq>=0.9.0",
    "pyttsx3>=2.98",
    "sounddevice>=0.4.7",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
    "pydub>=0.25.0",
    "pyngrok>=7.0.0",
    "gunicorn>=21.0.0",
    "gtts>=2.4.0",
    "edge-tts>=6.1.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
